--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@glazed/did-datastore": "^0.3.2",
     "@google-cloud/bigquery": "^6.0.2",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "did-session": "^0.1.1",
     "dids": "^3.3.0",
+    "ethers": "^5.7.1",
     "key-did-provider-ed25519": "^2.0.1",
     "key-did-resolver": "^2.1.1",
     "pg": "^8.8.0",
